tests/pp-fail/bad_else.fl.0.exp
Error: bad_else.fl(1,1): Unexpected \else directive
\else
^     
